# skewer

./: .gitignore  README.md  pyproject.toml  wsgi.py
src/skewer/: __init__.py  app.py  config.py  db.py  schema.py
src/skewer/static/css/: style.css
src/skewer/static/js/: main.js
src/skewer/templates/: base.html  databases.html  detail.html  index.html  sample.html  tables.html
tests/: test_app.py  test_config.py
